gap fix

--- a/styles/value.css
+++ b/styles/value.css
@@ -19,7 +19,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 32px;
+  gap: 56px;
 
   >p{
     width: 56px;
